<resources>
    <string name="app_name_eng">MyOwnTimer</string>
    <string name="app_name_kor">나만의 타이머</string>
    <string name="txt_backDescription">뒤로가기</string>
    //Main Page Text
    <string name="txt_main_01">당신은 연속</string>
    <string name="txt_main_02">일간</string>
    <string name="text_add">추가</string>
    <string name="txt_main_03">목표를 향해 나아가고 있습니다.</string>
    <string name="txt_add_hint">목표를 적어주세요.</string>
    <string name="txt_main_update_description">목표 업데이트</string>
    <string name="txt_main_profile_description">프로필 페이지 이동</string>
    <string name="txt_main_setting_description">설정 페이지 이동</string>
    <string name="txt_main_update_title">수정하기</string>
    <string name="txt_main_add_title">추가하기</string>
    //ViewPager2 Item Text
    <string name="txt_slash">/</string>
    <string name="txt_today">오늘</string>
    <string name="txt_weekend">주</string>
    <string name="txt_month">달</string>\
    <string name="txt_total">통합</string>
    <string name="txt_commas">…</string>
    //BottomNavi Menu Text
    <string name="txt_timer">타이머</string>
    <string name="txt_todo">할 일</string>
    <string name="txt_calendar">달력</string>
    <string name="txt_chart">통계</string>
    //TodoFragment Frame Text
    <string name="txt_todo_hint">할 일을 적어주세요.</string>
    <string name="txt_todo_dialog_success">현재 성공 여부</string>
    <string name="txt_todoAdd_description">할 일 추가</string>
    <string name="txt_todoUpdate_description">할 일을 꾹 누르시면 수정이 가능합니다.</string>
    <string name="txt_todo_update_cancel">취 소</string>
    <string name="txt_todo_update_update">수 정</string>
    <string name="txt_todo_update_delete">삭제하기</string>
    //TimerFragment Frame Text
    <string name="txt_stopwatch">스톱워치</string>
    <string name="txt_start">시 작</string>
    <string name="txt_stop">정 지</string>
    <string name="txt_setTime">시간 설정</string>
    <string name="txt_hour">시</string>
    <string name="txt_min">분</string>
    <string name="txt_second">초</string>
    <string name="txt_initTime">00:00:00</string>
    //CalendarFragment Weekend Text
    <string name="txt_sunDay">SUN</string>
    <string name="txt_monDay">MON</string>
    <string name="txt_tueDay">TUE</string>
    <string name="txt_wedDay">WED</string>
    <string name="txt_thuDay">THU</string>
    <string name="txt_friDay">FRI</string>
    <string name="txt_satDay">SAT</string>
    <string name="txt_time">시 간</string>
    //ChartFragment Text
    <string name="txt_totalTime">총시간</string>
    //SettingPage Text
    <string name="txt_setting">설 정</string>
    <string name="txt_comma">.</string>
    <string name="txt_backup">백 업</string>
    <string name="txt_restore">복 원</string>
    <string name="txt_dataBackUp">데이터 백업하기</string>
    <string name="txt_dataRestore">데이터 복원하기</string>
    <string name="txt_recentBackUpDate">최근 백업 날짜</string>
    <string name="txt_review">리뷰남기기</string>
    <string name="txt_inquiry">문의하기</string>
    <string name="txt_sound">소리</string>
    <string name="txt_vibrate">진동</string>
    <string name="txt_soundAndVibrate">소리 + 진동</string>
    <string name="txt_timerAlarmSet">타이머 알림 설정</string>
    <string name="txt_restoreDescription">데이터 복원 시 앱이 재실행됩니다.</string>
    //ProfilePage Text
    <string name="txt_profile">내 정보</string>
    <string name="txt_goal">목표</string>
    <string name="txt_usingTime">사용 시간</string>
    <string name="txt_goalAvgTime">목표 평균 시간</string>
    <string name="txt_goalMaxTime">목표 최대 시간</string>
    <string name="txt_monthAvgTime">월간 평균 시간</string>
    <string name="txt_monthMaxTime">월간 최대 시간</string>
    <string name="txt_piece">개</string>
    <string name="txt_nextMonth">다음 달</string>
    <string name="txt_previousMonth">이전 달</string>
    
</resources>